--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">MyFirstApp</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="email_prompt">Email</string>
+    <string name="password_prompt">Password</string>
+    <string name="login">Login</string>
+    <string name="register">Sign up for AppDojo!</string>
+    <string name="logo">Logo</string>
 
 </resources>
